components/roasted-mosquito-python/base/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata: 
  labels: 
    app.kubernetes.io/instance: roasted-mosquito-python
    app.kubernetes.io/managed-by: kustomize
    app.kubernetes.io/name: roasted-mosquito-python 
  name: roasted-mosquito-python
spec:
  port:
    targetPort: 8081 
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: edge
  to:
    kind: Service
    name: roasted-mosquito-python
    weight: 100
